alpha build complete

--- a/index.html
+++ b/index.html
@@ -19,90 +19,120 @@
     <div class="gallery">
       <!-- Card 1 -->
       <div class="card">
-        <img src="Images/Temple ChatGPT.png" alt="AI Image 1" onclick="openModal(this)">
+        <img src="Images/Temple ChatGPT.png" 
+        alt="AI Image 1" 
+        data-fullprompt="Cyberpunk temple in Japan"
+        onclick="openModal(this)">
         <div class="info">
-          <p><strong>Prompt:</strong> Cyberpunk temple in Japan</p>
+          <p><strong>Prompt:</strong> Cyberpunk ...</p>
           <p><strong>AI Used:</strong> ChatGPT</p>
         </div>
       </div>
 
       <!-- Card 2 -->
       <div class="card">
-        <img src="Images/Temple 1 Sora.png" alt="AI Image 2" onclick="openModal(this)">
+        <img src="Images/Temple 1 Sora.png" 
+        alt="AI Image 2" 
+        data-fullprompt="Cyberpunk temple in Japan"
+        onclick="openModal(this)">
         <div class="info">
-          <p><strong>Prompt:</strong> Cyberpunk temple in Japan</p>
+          <p><strong>Prompt:</strong> Cyberpunk ... </p>
           <p><strong>AI Used:</strong> Sora </p>
         </div>
       </div>
 
       <!-- Card 3 -->
       <div class="card">
-        <img src="Images/Temple 2 Sora.png" alt="AI Image 3" onclick="openModal(this)">
+        <img src="Images/Temple 2 Sora.png" 
+        alt="AI Image 3" 
+        data-fullprompt="Cyberpunk temple in Japan"
+        onclick="openModal(this)">
         <div class="info">
-          <p><strong>Prompt : </strong> Cyberpunk temple in Japan</p>
+          <p><strong>Prompt : </strong> Cyberpunk ... </p>
           <p><strong>AI Used : </strong> Sora </p>
         </div>
       </div>
 
       <!-- Card 4 -->
       <div class="card">
-        <img src="Images/Hitman.png" alt="AI Sketch 4" onclick="openModal(this)">
+        <img src="Images/Hitman.png" 
+        alt="AI Sketch 4" 
+        data-fullprompt="Create image of character similar to agent 47 of hitman absolution remember that image should be a sketch"
+        onclick="openModal(this)">
         <div class="info">
-          <p><strong>Prompt : </strong>Create image of character similar to agent 47 of hitman absolution remember that image should be a sketch</p>
+          <p><strong>Prompt : </strong> Create ima... </p>
           <p><strong>AI Used : </strong> ChatGPT </p>
         </div>
       </div>
 
       <!-- Card 5 -->
       <div class="card">
-        <img src="Images/Bounty on arthur.png" alt="AI Image 5 " onclick="openModal(this)">
+        <img src="Images/Bounty on arthur.png" 
+        alt="AI Image 5 " 
+        data-fullprompt="Genrate a imagee of Poster of Bounty in Red Dead Redemption 2"
+        onclick="openModal(this)">
         <div class="info">
-          <p><strong>Prompt : </strong> Genrate a imagee of Poster of Bounty in Red Dead Redemption 2 </p>
+          <p><strong>Prompt : </strong> Genrate a... </p>
           <p><strong>AI Used : </strong> ChatGPT </p>
         </div>
       </div>
 
       <!-- Card 6 -->
       <div class="card">
-        <img src="Images/gta 2.png" alt="AI Image 6" onclick="openModal(this)">
+        <img src="Images/gta 2.png" 
+        alt="AI Image 6" 
+        data-fullprompt="Genrate a Poster related to GTA 6 Style:Comic Book Theme:Cityscapes and Cars Text:"GTA VI" and "MAY 26, 2026" "
+        onclick="openModal(this)">
         <div class="info">
-          <p><strong>Prompt : </strong> Genrate a Poster related to GTA 6 Style:Comic Book Theme:Cityscapes and Cars Text:"GTA VI" and "MAY 26, 2026" </p>
+          <p><strong>Prompt : </strong> Genrate a Po.. </p>
           <p><strong>AI Used : </strong> ChatGPT </p>
         </div>
       </div>
 
       <!-- Card 7 -->
       <div class="card">
-        <img src="Images/gta 1.png" alt="AI Image 7" onclick="openModal(this)">
+        <img src="Images/gta 1.png" 
+        alt="AI Image 7"
+        data-fullprompt="Genrate a Poster related to GTA 6 Style:Comic Book Theme:Cityscapes and Cars Text:"GTA VI" and "MAY 26, 2026" " 
+        onclick="openModal(this)">
         <div class="info">
-          <p><strong>Prompt : </strong> Genrate a Poster related to GTA 6 Style:Comic Book Theme:Cityscapes and Cars Text:"GTA VI" and "MAY 26, 2026" </p>
+          <p><strong>Prompt : </strong> Genrate a Po.. </p>
           <p><strong>AI Used : </strong> ChatGPT </p>
         </div>
       </div>
 
       <!-- Card  8-->
       <div class="card">
-        <img src="Images/ezio 1.png" alt="AI Image 8" onclick="openModal(this)">
+        <img src="Images/ezio 1.png" 
+        alt="AI Image 8" 
+        data-fullprompt=" A colored sketch of a hooded male assassin in a walking pose, wearing an ornate white and silver Assassin robe with red accents, brown leather armor, a red sash, and twin hidden blades extended from both wrists. His cape flows behind him, and his face is partially shadowed under the hood. The outfit has intricate Renaissance-style embroidery. The artwork is drawn on aged parchment — textured yellowed paper with weathered, torn edges. Add subtle Assassin’s Creed insignias in the background, sketched in faded red ink or embossed style. Include scattered bloodstains across the parchment a nd faint splashes near the assassin’s boots and blades, giving it a gritty, battle-worn feel. The style is semi-realistic with visible pencil and watercolor-like strokes, evoking the look of an ancient Brotherhood manuscript "
+        onclick="openModal(this)">
         <div class="info">
-          <p><strong>Prompt : </strong> A colored sketch of a hooded male assassin in a walking pose, wearing an ornate white and silver Assassin robe with red accents, brown leather armor, a red sash, and twin hidden blades extended from both wrists. His cape flows behind him, and his face is partially shadowed under the hood. The outfit has intricate Renaissance-style embroidery. The artwork is drawn on aged parchment — textured yellowed paper with weathered, torn edges. Add subtle Assassin’s Creed insignias in the background, sketched in faded red ink or embossed style. Include scattered bloodstains across the parchment and faint splashes near the assassin’s boots and blades, giving it a gritty, battle-worn feel. The style is semi-realistic with visible pencil and watercolor-like strokes, evoking the look of an ancient Brotherhood manuscript </p>
+          <p><strong>Prompt : </strong> A colored... </p>
           <p><strong>AI Used : </strong> Sora </p>
         </div>
       </div>
 
        <!-- Card 9 -->
       <div class="card">
-        <img src="Images/Rdr theme house.png" alt="AI Image 9" onclick="openModal(this)">
+        <img src="Images/Rdr theme house.png" 
+        alt="AI Image 9" 
+        data-fullprompt=" Genrate a image of House on the theme of RDR 2 "
+        onclick="openModal(this)">
         <div class="info">
-          <p><strong>Prompt : </strong> Genrate a image of House on the theme of RDR 2 </p>
+          <p><strong>Prompt : </strong> Genrate a ima...</p>
           <p><strong>AI Used : </strong> ChatGPT </p>
         </div>
       </div>
 
       <!-- Card 10 -->
       <div class="card">
-        <img src="Images/gta.webp" alt="AI Image 10" onclick="openModal(this)">
+        <img src="Images/gta.webp" 
+        alt="AI Image 10"
+        data-fullprompt=" Generate an image with some rajasthan traditional vibe and with title of grand theft auto hanumangarh city stories which looks like a gta liberty city stories theme " 
+        onclick="openModal(this)">
         <div class="info">
-          <p><strong>Prompt : </strong> Generate an image with some rajasthan traditional vibe and with title of grand theft auto hanumangarh city stories which looks like a gta liberty city stories theme </p>
+          <p><strong>Prompt : </strong> Generate an im...</p>
           <p><strong>AI Used : </strong> Sora </p>
         </div>
       </div>
@@ -119,8 +149,11 @@
 
   <!-- Modal -->
   <div id="modal" class="modal" onclick="closeModal()">
+  <div class="modal-content">
     <img id="modalImg" />
+    <p id="modalPrompt"></p>
   </div>
+</div>
 
   <script src="script.js"></script>
 </body>
